--- a/css/home.css
+++ b/css/home.css
@@ -115,12 +115,23 @@
     float: right;
 }
 .buyBtn{
-    display: block;
+    display: inline-block;
     width: 1.5rem;
     height: 0.5rem;
-    margin: 0.25rem auto;
     background: url("../images/buyBtn.png");
     background-size: 100% 100%;
+}
+.type{
+    width: 50%;
+    float: left;
+    margin-top: 0.5rem;
+    text-align: center;
+}
+.type h2{
+    font-size: 0.15rem;
+    font-family: 微软雅黑;
+    color: #000000;
+
 }
 .activeStrategy{
     padding: 0 1.5rem;
@@ -288,6 +299,10 @@
         letter-spacing: 0;
         padding: 0 0.1rem;
         line-height: 0.4rem;
+    }
+    .buyBtn{
+        width: 2.4rem;
+        height: 0.8rem;
     }
 
 }
